fixed mobile responsiveness in newJobs, added dropdown z-index

--- a/src/partials/_topNav.scss
+++ b/src/partials/_topNav.scss
@@ -6,6 +6,7 @@
   align-items: flex-start;
   padding: 30px 50px;
   color: $senary;
+  z-index: 50;
 
   a,
   button,
